<resources>
    <string name="app_name">Marketplace</string>
    <string name="kindly_provide_your_name">Kindly Provide Your Name</string>
    <string name="proceed">PROCEED</string>
    <string name="full_names">Full Names</string>
    <string name="kindly_provide_your_full_names_to_proceed">How can we call you?</string>
    <string name="textview">TextView</string>
    <string name="sell">SELL</string>
    <string name="buy">BUY</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="hi">Hi </string>
    <string name="space">" "</string>
    <string name="Marketplace">Marketplace</string>
    <string name="title_activity_buy">All Featured Items</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home </string>
    <string name="second_fragment_label">Orders </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <integer name="column">1</integer>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">REGISTER</string>
    <string name="hint">Username</string>
    <string name="signin">SIGN IN</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="checkbox">com.example.marketplace.checkbox</string>
    <string name="email">com.example.marketplace.email</string>
    <string name="pasword">com.example.marketplace.password</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="emailaddress">Email Address</string>
    <string name="not_registered_click_here">Not Registered? Click here</string>
    <string name="already_registered_sign_in">Already Registered? Sign In</string>
    <string name="title_activity_sell">SellActivity</string>
    <string name="add_new_category">Add New Category</string>
    <string name="category_name">Category Name</string>
    <string name="saved_successfully">New Category added successfully</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="notification">Notification</string>
    <string name="my_stores">My Stores</string>
    <string name="orders">Orders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="store_location">Store Location</string>
    <string name="add_new_store">Add New Store</string>
    <string name="my_orders">My Orders</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="add_product">Sell Product</string>
    <string name="location">Choose Location</string>
    <string name="choose_category">Choose Category</string>
    <string name="category">Category</string>
    <string name="image_name">Image Name</string>
    <string name="upload_an_image">Upload an Image</string>
    <string name="product_image">Product Image</string>
    <string name="rating">Rating</string>
    <string name="my_cart">My Cart</string>
    <string name="permision_denied">Permission denied</string>

</resources>
