<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".ui.LoginActivity">


    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_email_black_24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="@dimen/margin_top">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="@dimen/padding_thirty_dp"
            android:fontFamily="@font/josefin"
            android:hint="@string/emailaddress"
            android:inputType="text"
            android:textAppearance="@style/Theme.Material"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="@dimen/margin_top">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="@font/josefin"
            android:hint="@string/password"
            android:padding="@dimen/padding_thirty_dp"
            android:inputType="textPassword"
            android:textAppearance="@style/Theme.Material"
            android:textColor="@color/white"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top"
        android:background="@drawable/button_round_corner"
        android:backgroundTint="@color/colorPrimaryDark"
        android:padding="@dimen/margin_top"
        android:text="@string/signin"
        android:textAppearance="@style/TextAppearance.Marketplace.Logo"
        app:rippleColor="@color/colorAccent" />

    <CheckBox
        android:id="@+id/signed_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_top"
        android:fontFamily="@font/josefin"
        android:padding="@dimen/margin_top"
        android:text="@string/keep_me_signed_in"
        android:textColorHighlight="#FB8C00"
        android:textColorLink="@color/white"
        android:textSize="20sp" />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered_click_here"
        android:fontFamily="@font/josefin"
        android:onClick="openRegisterActivity"
        android:layout_gravity="center"
        android:textSize="@dimen/reg_text_size"
        android:gravity="center"
        android:textColor="@color/white"/>
</LinearLayout>